Edit program formatting to make it more readable. Fix major flaws with editing by adding padding and margin rules to CSS file, rather than html files.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -8,6 +8,14 @@ body {
     text-decoration-color: white;
     font-family: arial;
 }
+
+p {
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-top: 10px;
+    line-height: 2;
+}
+
 nav {
     width: 100%;
     height: 70px;
@@ -15,6 +23,16 @@ nav {
 }
 
 img {
+    max-width: auto;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+img.cards {
     max-width: auto;
     height: auto;
     display: block;
@@ -28,17 +46,23 @@ img {
     padding: 10px;
 }
 
-div {
-    margin-top: 10px;
-    margin-left: 10px;
+div{
     color: darksalmon;
 }
 
 h1 {
+    color: darksalmon;
     font-size: 50px;
-    margin-top: 30px;
+    text-align: center;
+    padding: 18px;
+    text-align:center
+}
+
+h2 {
+    padding: 15px;
     text-align: center;
 }
+
 ul {
 
 }
@@ -46,7 +70,7 @@ ul {
 ul li {
     list-style: none;
     display: inline-block;
-    float: left;
+    float: center;
     line-height: 70px;
 }
 
@@ -79,9 +103,19 @@ div.gallery img {
   width: 100%;
   height: auto;
   cursor: default;
+  max-width: auto;
+  height: auto;
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 div.desc {
+  padding: 8px;
+  text-align: center;
+}
+
+div.category {
   padding: 8px;
   text-align: center;
 }
